<resources>
    <string name="app_name">Contacts</string>
    <string name="hello_blank_fragment">Edit Contacts Detail Fragment</string>
    <string name="profile_pic_desc">Image of a Contact</string>
    <string name="contact">Contact</string>
    <string name="edit">Edit</string>

    <string name="message">message</string>
    <string name="call">call</string>
    <string name="email">email</string>
    <string name="favourite">favourite</string>
    <string name="mobile">Mobile</string>

    <string name="contact_id">Contact ID</string>
    <string name="no">+91 989898</string>
    <string name="desc">Desc</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
