<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.EditContactFragment"
                                                   android:id="@+id/frameLayout2">


    <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="153dp"
            android:layout_height="145dp"
            android:contentDescription="@string/desc"
            android:id="@+id/imgVw_profile_pic" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
    />
    <TextView
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/name_font"
            android:id="@+id/tv_cancel" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/name_font"
            android:id="@+id/tv_done" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/mobile"
            android:textSize="@dimen/name_font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mobile_lbl" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:textSize="@dimen/name_font_small"
            android:layout_height="0dp"
            android:id="@+id/tv_mobile" app:layout_constraintStart_toEndOf="@+id/tv_mobile_lbl"
            android:layout_marginLeft="112dp" android:layout_marginStart="112dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tv_last_name"/>
    <TextView
            android:layout_width="83dp"
            android:layout_height="22dp"
            android:textSize="@dimen/name_font_small"
            android:text="@string/contact_id"
            android:id="@+id/tv_email_lbl" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_lbl"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contact_id"
            android:textSize="@dimen/name_font_small"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/tv_mobile"
            app:layout_constraintStart_toEndOf="@+id/tv_email_lbl" android:layout_marginLeft="104dp"
            android:layout_marginStart="104dp"/>
    <TextView
            android:text="@string/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="@dimen/name_font_small"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/imgVw_profile_pic"/>
    <EditText

            android:inputType="text"
            android:layout_width="163dp"
            android:layout_height="46dp"
            android:textSize="@dimen/name_font_small"
            android:id="@+id/tv_first_name"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginLeft="76dp"
            android:layout_marginStart="76dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/imgVw_profile_pic"/>
    <TextView
            android:text="@string/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/name_font_small"
            android:id="@+id/textView3" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <EditText
            android:inputType="text"
            android:layout_width="172dp"
            android:layout_height="51dp"
            android:textSize="@dimen/name_font_small"
            android:id="@+id/tv_last_name" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_first_name"/>
</androidx.constraintlayout.widget.ConstraintLayout>